[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
volatile = "0.3"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
lose-net-stack = { git = "https://github.com/yfblock/lose-net-stack", rev = "db42380" }
easy-fs = { path = "../easy-fs" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }
riscv-decode = { git = "https://github.com/latte-c/riscv-decode", rev = "bc8da4e" }
numeric-enum-macro = "0.2.0"
dyn-fmt = { version = "0.3.0", default-features = false }
downcast-rs = { version = "1.2", default-features = false }
ebpf2rv = { git = "https://github.com/livingshade/ebpf2rv", rev = "ecfc526" }
ruprobes = { git = "https://github.com/chenzhiy2001/ruprobes", features = ["rCore-Tutorial"] }
trap_context_riscv = { git = "https://github.com/chenzhiy2001/trap_context_riscv"}
trapframe = { git = "https://github.com/rcore-os/trapframe-rs"}
spin = "0.5"

[profile.release]
debug = true
opt-level=0
